# jwst-pah-workbench

./: .gitignore  Makefile  README.md  pyproject.toml
pah_workbench/: __init__.py  __main__.py  app.py  main.py
pah_workbench/models/: __init__.py  imported_file.py
pah_workbench/services/: file_import_service.py  logging_service.py  settings_service.py
pah_workbench/ui/: main_window.py
pah_workbench/ui/docks/: __init__.py  inspector_dock.py  logs_dock.py  project_explorer_dock.py
pah_workbench/ui/views/: __init__.py  image_view.py  spectrum_view.py
tests/: test_smoke.py
