[build-system]
requires = ["hatchling>=1.24.0", "editables>=0.5"]
build-backend = "hatchling.build"

[project]
name = "jwst-pah-workbench"
version = "0.1.0"
description = "Linux desktop scaffold for JWST PAH Workbench"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
jwst-pah-workbench = "pah_workbench.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["pah_workbench"]
